gari/examples/helloworld/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo-example-com
  namespace: default
spec:
  hostnames:
    - foo.example.com
  rules:
  - backendRefs:
    - name: hello-world
      port: 80
